--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>    
-  	<title>SCRIIIIP</title>  	
-  </head>
-  
-  <body>
-    This should be replaced by the Javascript in scriiip.js - if you see this something has gone horribly wrong. Run for your life. 
-  </body>
-  
-  <script type="text/javascript" src="db_script_cache.js">
-    window.script_cache = window.script_cache || new ScriptCache();
-    window.script_cache.includes([ 
-      ['mootools-1.2.1-core.js','1.1'],
-      // ['http://ajax.googleapis.com/ajax/libs/mootools/1.2.3/mootools-yui-compressed.js','1.1'],
-      ['scriiip.js'            ,'1.1'] 
-    ]);
-  </script>
-  
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dt
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head id="Head1" runat="server">
+<title>Orders Menu</title>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+<script type="text/javascript" src="dbscriptcache.min.js">
+  window.script_cache = window.script_cache || new ScriptCache();
+  window.script_cache.includes([
+    ['js/all.js'            ,'1.0'] 
+  ]);
+  window.script_cache.include_css([
+    ['css/all.css'            ,'1.0']
+  ]);
+</script>
+</head>
 </html>
